--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.stone</groupId>
-	<artifactId>facade-web-demo</artifactId>
+	<artifactId>csrf-demo</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>facade-web-demo</name>
+	<name>csrf-demo</name>
 	<url>http://maven.apache.org</url>
 
 
